--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -8,5 +8,5 @@ es:
   facebook: "Facebook"
   description: "Descripcion"
   new_supplier: "Nuevo Proveedor"
-  listing_supplier: "Listado de Proveedores"
+  listing_suppliers: "Listado de Proveedores"
   editing_supplier: "Editando Proveedor"
